# vending-machine-tracker

./: .gitignore  README.md  api.yml  app_run.py  cred.yaml  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: python-tests.yml
app/: __init__.py  api.py  app.py  app_run.py  listing.py  products.py  run_query.py  util.py  vending_machines.py  vending_service.py
app/config/: credentials.py  error_message.py
app/routes/: listing.py  products.py  purchase.py  vending_machines.py  vending_service.py
app/templates/: index.html
app/util/: api.py  run_query.py  sql_translate.py
scripts/: vending_machine.sql
tests/: conftest.py  test_api.py  test_listings.py  test_products.py  test_purchase.py  test_services.py  test_sql_translate.py  test_vending_machine.py  vending_machine.sql
tests/scripts/: populate_data.sql  vending_machine.sql
