[tool.poetry]
name = "vending-tracker"
version = "0.1.0"
description = ""
authors = ["karank85 <kkjas85@gmail.com>"]
readme = "README.md"
packages = [{include = "vending_tracker"}]

[tool.poetry.dependencies]
python = ">3.7"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
