[tool.poetry]
name = "vending-tracker"
version = "0.1.0"
description = ""
authors = ["karank85 <kkjas85@gmail.com>"]
readme = "README.md"
packages = [{ include="app/"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pre-commit = "^3.0.1"
pytest-cov = "^3.0.0"
ipykernel = "^6.15.1"
flake8-annotations = "^2.9.1"
flake8-eradicate = "^1.4.0"
flake8 = "^5.0.1"
requests = "^2.28.2"
flask = "^2.2.2"
mysqlclient = "^2.1.1"
mysql = "^0.0.3"
flask-mysql = "^1.5.2"
flask-mysqldb = "^1.0.1"
pymysql = "^1.0.2"
mysql-client = "^0.0.1"
flask-wtf = "^1.1.1"
cryptography = "^39.0.0"
wheel = "^0.38.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
